@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-08-10T12:32:45Z",
-  "count_outdated" : 2684,
-  "uniques_outdated" : 869,
+  "timestamp" : "2024-08-12T12:36:46Z",
+  "count_outdated" : 2685,
+  "uniques_outdated" : 870,
   "count" : 2696,
   "uniques" : 874,
   "views" : [
-    {
-      "timestamp": "2024-07-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-07-30T00:00:00Z",
       "count": 5,
