@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 5,
+  "count": 11,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2024-07-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-07-30T00:00:00Z",
       "count": 5,
